--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="logo"></div>
+        <a href="https://treblig-punisher.itch.io/clipboard-history"><div class="logo"></div></a>
         <section class="main-section-wrapper">
             <section>
                 <h1>Selection Shortcuts</h1>
@@ -26,6 +26,7 @@
                 <h1>Copying Shortcuts</h1>
                 <ul class="copy shortcuts">
                     <li><strong>Ctrl + C</strong> - Copy All Selected Entries (Must have at least one entry selected) </li>
+                    <li><strong>Ctrl + Shift + C</strong> - Copy All Entries</li>
                 </ul>
             </section>
             <section>
@@ -33,6 +34,18 @@
                 <ul class="delete shortcuts">
                     <li><strong>Ctrl + Delete</strong> - Delete All Entries (This will delete all entries, selected or not)</li>
                     <li><strong>Delete</strong> - Delect All Selected Entries (Must have at least one entry selected)</li>
+                </ul>
+            </section>
+            <section>
+                <h1>Window Top Most Shortcut</h1>
+                <ul class="shortcuts">
+                    <li><strong>T</strong> - Enables/Disables the window ability top remain on top of other apps</li>                    
+                </ul>
+            </section>
+            <section>
+                <h1>Undo Shortcut</h1>
+                <ul class="shortcuts">
+                    <li><strong>Ctrl+Z</strong> - Undoes the previous action/s  (Keep in mind that undos can't be redone yet)</li>                    
                 </ul>
             </section>
         </section>
