--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
             <section>
                 <h1>Selection Shortcuts</h1>
                 <ul class="selection shortcuts">
-                    <li><strong>Ctrl + Left Click</strong> - Single Entry Selection</li>
-                    <li><strong>Ctrl + A</strong> - Select All Entries</li>
-                    <li><strong>Ctrl + Shift</strong>  - Deselect All Entries</li>
+                    <li><strong>Ctrl + Left Click</strong> - Single entry selection</li>
+                    <li><strong>Ctrl + A</strong> - Select all entries</li>
+                    <li><strong>Ctrl + Shift</strong>  - Deselect all entries</li>
                 </ul>
             </section>
             <section>
                 <h1>Copying Shortcuts</h1>
                 <ul class="copy shortcuts">
-                    <li><strong>Ctrl + C</strong> - Copy All Selected Entries (Must have at least one entry selected) </li>
-                    <li><strong>Ctrl + Shift + C</strong> - Copy All Entries</li>
+                    <li><strong>Ctrl + C</strong> - Copy all selected entries (Must have at least one entry selected) </li>
+                    <li><strong>Ctrl + Shift + C</strong> - Copy all entries</li>
                 </ul>
             </section>
             <section>
                 <h1>Delete Shortcuts</h1>
                 <ul class="delete shortcuts">
-                    <li><strong>Ctrl + Delete</strong> - Delete All Entries (This will delete all entries, selected or not)</li>
-                    <li><strong>Delete</strong> - Delect All Selected Entries (Must have at least one entry selected)</li>
+                    <li><strong>Ctrl + Delete</strong> - Delete all entries (This will delete all entries, selected or not)</li>
+                    <li><strong>Delete</strong> - Delete all selected entries (Must have at least one entry selected)</li>
                 </ul>
             </section>
             <section>
@@ -46,6 +46,19 @@
                 <h1>Undo Shortcut</h1>
                 <ul class="shortcuts">
                     <li><strong>Ctrl+Z</strong> - Undoes the previous action/s  (Keep in mind that undos can't be redone yet)</li>                    
+                </ul>
+            </section>
+            <section>
+                <h1>Saving Shortcuts</h1>
+                <ul class="shortcuts">
+                    <li><strong>Ctrl+S</strong> - Saves all entries as a text(.txt) file (selected or not)</li>      
+                    <li><strong>Ctrl+Shift+S</strong> - Saves all selected entries as a text(.txt) file (Must have at least one entry selected)</li>                              
+                </ul>
+            </section>
+            <section>
+                <h1>Closing The Application Shortcut</h1>
+                <ul class="shortcuts">
+                    <li><strong>F4</strong> - This prompts a warning window which asks you whether or not you want to exit the application</li>
                 </ul>
             </section>
         </section>
