There was some text missing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="selection shortcuts">
                     <li><strong>Ctrl + Left Click</strong> - Single entry selection</li>
                     <li><strong>Ctrl + A</strong> - Select all entries</li>
-                    <li><strong>Ctrl + Shift</strong>  - Deselect all entries</li>
+                    <li><strong>Ctrl + Shift + A</strong>  - Deselect all entries</li>
                 </ul>
             </section>
             <section>
