changed the div logo container for an img tag

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <a href="https://treblig-punisher.itch.io/clipboard-history"><div class="logo"></div></a>
+        <a href="https://treblig-punisher.itch.io/clipboard-history"><img class="logo" src="/Clipboard_History_App_Name.png"></a>
         <section class="main-section-wrapper">
             <section>
                 <h1>Selection Shortcuts</h1>
