Logo  and shortcuts have been updated

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet"> 
     <title>Clipboard History Documentation</title>
+    <link rel="icon" href="ClipboardHistoryLogoNew.svg">
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
@@ -19,7 +20,9 @@
                 <ul class="selection shortcuts">
                     <li><strong>Ctrl + Left Click</strong> - Single entry selection</li>
                     <li><strong>Ctrl + A</strong> - Select all entries</li>
-                    <li><strong>Ctrl + Shift + A</strong>  - Deselect all entries</li>
+                    <li><strong>Alt + A</strong>  - Deselect all entries</li>
+                    <li><strong>Ctrl + I</strong>  - Inverts the current selection.(Selects everything if nothing is selected)</li>
+                    
                 </ul>
             </section>
             <section>
@@ -52,13 +55,20 @@
                 <h1>Saving Shortcuts</h1>
                 <ul class="shortcuts">
                     <li><strong>Ctrl+S</strong> - Saves all entries as a text(.txt) file (selected or not)</li>      
-                    <li><strong>Ctrl+Shift+S</strong> - Saves all selected entries as a text(.txt) file (Must have at least one entry selected)</li>                              
+                    <li><strong>Alt+S</strong> - Saves all selected entries as a text(.txt) file (Must have at least one entry selected)</li>                              
                 </ul>
             </section>
             <section>
                 <h1>Closing The Application Shortcut</h1>
                 <ul class="shortcuts">
                     <li><strong>F4</strong> - This prompts a warning window which asks you whether or not you want to exit the application</li>
+                </ul>
+            </section>
+            <section>
+                <h1>Options Shortcuts</h1>
+                <ul class="shortcuts">
+                    <li><strong>P</strong> - Disables/enables pop up messages</li>
+                    <li><strong>Ctrl+D</strong> - Opens the Documentation</li>
                 </ul>
             </section>
         </section>
