--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <a href="https://treblig-punisher.itch.io/clipboard-history"><img class="logo" src="Clipboard_History_App_Name.png"></a>
+        <a class="logo-container" href="https://treblig-punisher.itch.io/clipboard-history"><img class="logo" src="Clipboard_History_App_Name.png"></a>
         <section class="main-section-wrapper">
             <section>
                 <h1>Selection Shortcuts</h1>
